deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-rancher-deployment
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-rancher-deployment
        image: yikiksistemci/django_rancher:v1.0.0 
     
      ports:
      - containerPort: 80
