service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-rancher-svc
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30036
